--- a/test/rules/test_cases/Rule_CustomFM_L001.yml
+++ b/test/rules/test_cases/Rule_CustomFM_L001.yml
@@ -65,12 +65,21 @@ case3:
     order by 2
 
 too_many_blank_lines:
-  pass_str: |
+  fail_str: |
     select
       a,
       b,
       c
     
     
+    
+    from tbl
+
+added_line:
+  pass_str: |
+    select
+      a,
+      b,
+      c
     
     from tbl
